navbar collapse hide fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -283,11 +283,17 @@ p {
     .container {
         max-width: 960px;
     }
+    header.masthead p {
+        font-size: 45px !important;
+    }
 }
 
 @media (min-width: 768px) {
     .container {
         max-width: 720px;
+    }
+     header.masthead p {
+        font-size: 45px !important;
     }
 }
 
@@ -295,8 +301,11 @@ p {
     .container {
         max-width: 540px;
     }
+    header.masthead p {
+        font-size: 45px !important;
+    }
 }
-*/ 
+
 
 
 
@@ -397,6 +406,7 @@ img {
         flex: 0 0 66.66667%;
         max-width: 66.66667%;
     }
+    
 }
 
 .col-lg-8 {
